--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,12 +1,28 @@
 .Logo {
     background-color: #FFFFFF;
     padding: 8px;
-    height: 80%;
+    height: 100%;
     box-sizing: border-box;
     border-radius: 3px;
+    margin: 22px 0;
 
 }
 
 .Logo img {
     height: 100%;
+}
+
+@media (min-width: 500px) {
+    .Logo {
+        background-color: #FFFFFF;
+        padding: 8px;
+        height: 100%;
+        box-sizing: border-box;
+        border-radius: 3px;
+    
+    }
+    
+    .Logo img {
+        height: 100%;
+    }
 }
